--- a/index.html
+++ b/index.html
@@ -21,12 +21,44 @@
   <header>
     <!--Main Navigation-->
     <header>
-
-      <!-- SideNav slide-out button -->
-      <a href="#" data-activates="slide-out" class="btn btn-primary p-3 button-collapse">
-      <i class="fa fa-bars"></i>
-  </a>
-
+      <!--Navbar-->
+      <nav class="navbar navbar-expand-lg navbar-dark indigo">
+        <!-- Navbar brand -->
+        <a class="navbar-brand" href="#">Navbar</a>
+        <!-- Collapse button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <!-- Collapsible content -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <!-- Links -->
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <!-- Dropdown -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+              <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+          </ul>
+          <!-- Links -->]
+          <!-- Search form -->
+          <form class="form-inline">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          </form>
+        </div>
+        <!-- Collapsible content -->
+      </nav>
+      <!--/.Navbar-->
       <!-- Sidebar navigation -->
       <div id="slide-out" class="side-nav fixed">
         <ul class="custom-scrollbar list-unstyled">
@@ -165,25 +197,20 @@
         </ul>
       </div>
       <!--/. Sidebar navigation -->
-
     </header>
     <!--Main Navigation-->
-
   </header>
   <!--Main Navigation-->
-
   <!--Main layout-->
   <main>
 
   </main>
   <!--Main layout-->
-
   <!--Footer-->
   <footer>
 
   </footer>
   <!--Footer-->
-
   <!-- SCRIPTS -->
   <!-- JQuery -->
   <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
