--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="fixed-sn">
   <!--Main Navigation-->
   <header>
     <!--Main Navigation-->
     <header>
       <!--Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-dark indigo">
+      <nav class="navbar navbar-expand-lg navbar-dark indigo double-nav">
         <!-- Navbar brand -->
         <a class="navbar-brand" href="#">Navbar</a>
         <!-- Collapse button -->
@@ -211,7 +211,7 @@
 
   </footer>
   <!--Footer-->
-  <!-- SCRIPTS -->
+    <!-- SCRIPTS -->
   <!-- JQuery -->
   <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
   <!-- Bootstrap tooltips -->
