--- a/index.html
+++ b/index.html
@@ -23,180 +23,184 @@
     <header>
       <!--Navbar-->
       <nav class="navbar navbar-expand-lg navbar-dark indigo double-nav">
-        <!-- Navbar brand -->
-        <a class="navbar-brand" href="#">Navbar</a>
-        <!-- Collapse button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <!-- Collapsible content -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <!--Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-dark indigo double-nav">
+          <!-- SideNav slide-out button -->
+          <div class="float-left">
+            <a href="#" data-activates="slide-out" class="button-collapse">
+            <i class="fa fa-bars"></i>
+        </a>
+          </div>
+          <!-- Breadcrumb-->
+          <div class="breadcrumb-dn mr-auto">
+            <p>Material Design for Bootstrap</p>
+          </div>
           <!-- Links -->
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <ul class="nav navbar-nav nav-flex-icons ml-auto">
+            <li class="nav-item">
+              <a class="nav-link">
+            <i class="fa fa-envelope"></i>
+            <span class="clearfix d-none d-sm-inline-block">Contact</span>
+        </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link">
+            <i class="fa fa-gear"></i>
+            <span class="clearfix d-none d-sm-inline-block">Settings</span>
+        </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <!-- Dropdown -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-              <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-user"></i>
+            <span class="clearfix d-none d-sm-inline-block">Account</span>
+        </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="#">Action</a>
                 <a class="dropdown-item" href="#">Another action</a>
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
             </li>
           </ul>
-          <!-- Links -->]
-          <!-- Search form -->
-          <form class="form-inline">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          </form>
-        </div>
-        <!-- Collapsible content -->
-      </nav>
-      <!--/.Navbar-->
-      <!-- Sidebar navigation -->
-      <div id="slide-out" class="side-nav fixed">
-        <ul class="custom-scrollbar list-unstyled">
-          <!-- Logo -->
-          <li>
-            <div class="logo-wrapper waves-light">
-              <a href="#">
+        </nav>
+        <!--/.Navbar-->
+        <!-- Sidebar navigation -->
+        <div id="slide-out" class="side-nav fixed">
+          <ul class="custom-scrollbar list-unstyled">
+            <!-- Logo -->
+            <li>
+              <div class="logo-wrapper waves-light">
+                <a href="#">
                       <img src="https://mdbootstrap.com/img/logo/mdb-transparent.png" class="img-fluid flex-center">
                   </a>
-            </div>
-          </li>
-          <!--/. Logo -->
-          <!--Social-->
-          <li>
-            <ul class="social">
-              <li>
-                <a href="#" class="icons-sm fb-ic">
+              </div>
+            </li>
+            <!--/. Logo -->
+            <!--Social-->
+            <li>
+              <ul class="social">
+                <li>
+                  <a href="#" class="icons-sm fb-ic">
                           <i class="fa fa-facebook"> </i>
                       </a>
-              </li>
-              <li>
-                <a href="#" class="icons-sm pin-ic">
+                </li>
+                <li>
+                  <a href="#" class="icons-sm pin-ic">
                           <i class="fa fa-pinterest"> </i>
                       </a>
-              </li>
-              <li>
-                <a href="#" class="icons-sm gplus-ic">
+                </li>
+                <li>
+                  <a href="#" class="icons-sm gplus-ic">
                           <i class="fa fa-google-plus"> </i>
                       </a>
-              </li>
-              <li>
-                <a href="#" class="icons-sm tw-ic">
+                </li>
+                <li>
+                  <a href="#" class="icons-sm tw-ic">
                           <i class="fa fa-twitter"> </i>
                       </a>
-              </li>
-            </ul>
-          </li>
-          <!--/Social-->
-          <!--Search Form-->
-          <li>
-            <form class="search-form" role="search">
-              <div class="form-group waves-light">
-                <input type="text" class="form-control" placeholder="Search">
-              </div>
-            </form>
-          </li>
-          <!--/.Search Form-->
-          <!-- Side navigation links -->
-          <li>
-            <ul class="collapsible collapsible-accordion">
-              <li>
-                <a class="collapsible-header waves-effect arrow-r">
+                </li>
+              </ul>
+            </li>
+            <!--/Social-->
+            <!--Search Form-->
+            <li>
+              <form class="search-form" role="search">
+                <div class="form-group waves-light">
+                  <input type="text" class="form-control" placeholder="Search">
+                </div>
+              </form>
+            </li>
+            <!--/.Search Form-->
+            <!-- Side navigation links -->
+            <li>
+              <ul class="collapsible collapsible-accordion">
+                <li>
+                  <a class="collapsible-header waves-effect arrow-r">
                           <i class="fa fa-chevron-right"></i> Submit blog
                           <i class="fa fa-angle-down rotate-icon"></i>
                       </a>
-                <div class="collapsible-body">
-                  <ul>
-                    <li>
-                      <a href="#" class="waves-effect">Submit listing</a>
-                    </li>
-                    <li>
-                      <a href="#" class="waves-effect">Registration form</a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li>
-                <a class="collapsible-header waves-effect arrow-r">
+                  <div class="collapsible-body">
+                    <ul>
+                      <li>
+                        <a href="#" class="waves-effect">Submit listing</a>
+                      </li>
+                      <li>
+                        <a href="#" class="waves-effect">Registration form</a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li>
+                  <a class="collapsible-header waves-effect arrow-r">
                           <i class="fa fa-hand-pointer-o"></i> Instruction
                           <i class="fa fa-angle-down rotate-icon"></i>
                       </a>
-                <div class="collapsible-body">
-                  <ul>
-                    <li>
-                      <a href="#" class="waves-effect">For bloggers</a>
-                    </li>
-                    <li>
-                      <a href="#" class="waves-effect">For authors</a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li>
-                <a class="collapsible-header waves-effect arrow-r">
+                  <div class="collapsible-body">
+                    <ul>
+                      <li>
+                        <a href="#" class="waves-effect">For bloggers</a>
+                      </li>
+                      <li>
+                        <a href="#" class="waves-effect">For authors</a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li>
+                  <a class="collapsible-header waves-effect arrow-r">
                           <i class="fa fa-eye"></i> About
                           <i class="fa fa-angle-down rotate-icon"></i>
                       </a>
-                <div class="collapsible-body">
-                  <ul>
-                    <li>
-                      <a href="#" class="waves-effect">Introduction</a>
-                    </li>
-                    <li>
-                      <a href="#" class="waves-effect">Monthly meetings</a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li>
-                <a class="collapsible-header waves-effect arrow-r">
+                  <div class="collapsible-body">
+                    <ul>
+                      <li>
+                        <a href="#" class="waves-effect">Introduction</a>
+                      </li>
+                      <li>
+                        <a href="#" class="waves-effect">Monthly meetings</a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li>
+                  <a class="collapsible-header waves-effect arrow-r">
                           <i class="fa fa-envelope-o"></i> Contact me
                           <i class="fa fa-angle-down rotate-icon"></i>
                       </a>
-                <div class="collapsible-body">
-                  <ul>
-                    <li>
-                      <a href="#" class="waves-effect">FAQ</a>
-                    </li>
-                    <li>
-                      <a href="#" class="waves-effect">Write a message</a>
-                    </li>
-                    <li>
-                      <a href="#" class="waves-effect">FAQ</a>
-                    </li>
-                    <li>
-                      <a href="#" class="waves-effect">Write a message</a>
-                    </li>
-                    <li>
-                      <a href="#" class="waves-effect">FAQ</a>
-                    </li>
-                    <li>
-                      <a href="#" class="waves-effect">Write a message</a>
-                    </li>
-                    <li>
-                      <a href="#" class="waves-effect">FAQ</a>
-                    </li>
-                    <li>
-                      <a href="#" class="waves-effect">Write a message</a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-          </li>
-          <!--/. Side navigation links -->
-        </ul>
-      </div>
-      <!--/. Sidebar navigation -->
+                  <div class="collapsible-body">
+                    <ul>
+                      <li>
+                        <a href="#" class="waves-effect">FAQ</a>
+                      </li>
+                      <li>
+                        <a href="#" class="waves-effect">Write a message</a>
+                      </li>
+                      <li>
+                        <a href="#" class="waves-effect">FAQ</a>
+                      </li>
+                      <li>
+                        <a href="#" class="waves-effect">Write a message</a>
+                      </li>
+                      <li>
+                        <a href="#" class="waves-effect">FAQ</a>
+                      </li>
+                      <li>
+                        <a href="#" class="waves-effect">Write a message</a>
+                      </li>
+                      <li>
+                        <a href="#" class="waves-effect">FAQ</a>
+                      </li>
+                      <li>
+                        <a href="#" class="waves-effect">Write a message</a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+            </li>
+            <!--/. Side navigation links -->
+          </ul>
+        </div>
+        <!--/. Sidebar navigation -->
     </header>
     <!--Main Navigation-->
   </header>
@@ -207,11 +211,18 @@
   </main>
   <!--Main layout-->
   <!--Footer-->
-  <footer>
-
+  <footer class="page-footer blue center-on-small-only">
+    <!--Copyright-->
+    <div class="footer-copyright">
+      <div class="container-fluid">
+        © 2015 Copyright:
+        <a href="https://www.MDBootstrap.com"> MDBootstrap.com </a>
+      </div>
+    </div>
+    <!--/.Copyright-->
   </footer>
-  <!--Footer-->
-    <!-- SCRIPTS -->
+  <!--/.Footer-->
+  <!-- SCRIPTS -->
   <!-- JQuery -->
   <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
   <!-- Bootstrap tooltips -->
