put color back into the header after trying to use skins which are only in pro

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <!--Main Navigation-->
     <header>
       <!--Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-dark indigo double-nav">
+      <nav class="navbar navbar-expand-lg navbar-dark light-blue double-nav">
         <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark indigo double-nav">
+        <nav class="navbar navbar-expand-lg navbar-dark light-blue double-nav">
           <!-- SideNav slide-out button -->
           <div class="float-left">
             <a href="#" data-activates="slide-out" class="button-collapse">
