--- a/index.html
+++ b/index.html
@@ -15,104 +15,182 @@
   <!-- Your custom styles (optional) -->
   <link href="css/style.css" rel="stylesheet">
 </head>
-
-<body class="fixed-sn">
+<!--Main Navigation-->
+<header>
   <!--Main Navigation-->
   <header>
-    <!--Main Navigation-->
-    <header>
-      <!--Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-dark light-blue double-nav">
-        <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark light-blue double-nav">
-          <!-- SideNav slide-out button -->
-          <div class="float-left">
-            <a href="#" data-activates="slide-out" class="button-collapse">
-            <i class="fa fa-bars"></i>
-        </a>
+    <!-- Sidebar navigation -->
+    <div id="slide-out" class="side-nav fixed">
+      <ul class="custom-scrollbar list-unstyled">
+        <!-- Logo -->
+        <li>
+          <div class="logo-wrapper waves-light">
+            <a href="#">
+                        <img src="https://mdbootstrap.com/img/logo/mdb-transparent.png" class="img-fluid flex-center">
+                    </a>
           </div>
-          <!-- Breadcrumb-->
-          <div class="breadcrumb-dn mr-auto">
-            <p>Material Design for Bootstrap</p>
-          </div>
-          <!-- Links -->
-          <ul class="nav navbar-nav nav-flex-icons ml-auto">
-            <li class="nav-item">
-              <a class="nav-link">
-            <i class="fa fa-envelope"></i>
-            <span class="clearfix d-none d-sm-inline-block">Contact</span>
-        </a>
+        </li>
+        <!--/. Logo -->
+        <!--Social-->
+        <li>
+          <ul class="social">
+            <li>
+              <a href="#" class="icons-sm fb-ic">
+                            <i class="fa fa-facebook"> </i>
+                        </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link">
-            <i class="fa fa-gear"></i>
-            <span class="clearfix d-none d-sm-inline-block">Settings</span>
-        </a>
+            <li>
+              <a href="#" class="icons-sm pin-ic">
+                            <i class="fa fa-pinterest"> </i>
+                        </a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-user"></i>
-            <span class="clearfix d-none d-sm-inline-block">Account</span>
-        </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+            <li>
+              <a href="#" class="icons-sm gplus-ic">
+                            <i class="fa fa-google-plus"> </i>
+                        </a>
+            </li>
+            <li>
+              <a href="#" class="icons-sm tw-ic">
+                            <i class="fa fa-twitter"> </i>
+                        </a>
+            </li>
+          </ul>
+        </li>
+        <!--/Social-->
+        <!--Search Form-->
+        <li>
+          <form class="search-form" role="search">
+            <div class="form-group waves-light">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+          </form>
+        </li>
+        <!--/.Search Form-->
+        <!-- Side navigation links -->
+        <li>
+          <ul class="collapsible collapsible-accordion">
+            <li>
+              <a class="collapsible-header waves-effect arrow-r">
+                            <i class="fa fa-chevron-right"></i> Submit blog
+                            <i class="fa fa-angle-down rotate-icon"></i>
+                        </a>
+              <div class="collapsible-body">
+                <ul>
+                  <li>
+                    <a href="#" class="waves-effect">Submit listing</a>
+                  </li>
+                  <li>
+                    <a href="#" class="waves-effect">Registration form</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <a class="collapsible-header waves-effect arrow-r">
+                            <i class="fa fa-hand-pointer-o"></i> Instruction
+                            <i class="fa fa-angle-down rotate-icon"></i>
+                        </a>
+              <div class="collapsible-body">
+                <ul>
+                  <li>
+                    <a href="#" class="waves-effect">For bloggers</a>
+                  </li>
+                  <li>
+                    <a href="#" class="waves-effect">For authors</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <a class="collapsible-header waves-effect arrow-r">
+                            <i class="fa fa-eye"></i> About
+                            <i class="fa fa-angle-down rotate-icon"></i>
+                        </a>
+              <div class="collapsible-body">
+                <ul>
+                  <li>
+                    <a href="#" class="waves-effect">Introduction</a>
+                  </li>
+                  <li>
+                    <a href="#" class="waves-effect">Monthly meetings</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <a class="collapsible-header waves-effect arrow-r">
+                            <i class="fa fa-envelope-o"></i> Contact me
+                            <i class="fa fa-angle-down rotate-icon"></i>
+                        </a>
+              <div class="collapsible-body">
+                <ul>
+                  <li>
+                    <a href="#" class="waves-effect">FAQ</a>
+                  </li>
+                  <li>
+                    <a href="#" class="waves-effect">Write a message</a>
+                  </li>
+                  <li>
+                    <a href="#" class="waves-effect">FAQ</a>
+                  </li>
+                  <li>
+                    <a href="#" class="waves-effect">Write a message</a>
+                  </li>
+                  <li>
+                    <a href="#" class="waves-effect">FAQ</a>
+                  </li>
+                  <li>
+                    <a href="#" class="waves-effect">Write a message</a>
+                  </li>
+                  <li>
+                    <a href="#" class="waves-effect">FAQ</a>
+                  </li>
+                  <li>
+                    <a href="#" class="waves-effect">Write a message</a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
-        </nav>
-        <!--/.Navbar-->
-        <!-- Sidebar navigation -->
-        <div id="slide-out" class="side-nav fixed sn-bg-4">
-          <ul class="custom-scrollbar list-unstyled">
-            [...]
-          </ul>
+        </li>
+        <!--/. Side navigation links -->
+      </ul>
+    </div>
+    <!--/. Sidebar navigation -->
 
-          <!-- Mask -->
-          <div class="sidenav-bg mask-strong"></div>
-
-        </div>
-        <!--/. Sidebar navigation -->
-    </header>
-    <!--Main Navigation-->
   </header>
   <!--Main Navigation-->
-  <!--Main layout-->
-  <main>
+</header>
+<!--Main Navigation-->
 
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-secondary">Secondary</button>
-    <button type="button" class="btn btn-default">Default</button>
+<!--Main layout-->
+<main>
 
-  </main>
-  <!--Main layout-->
-  <!--Footer-->
-  <footer class="page-footer blue center-on-small-only">
-    <!--Copyright-->
-    <div class="footer-copyright">
-      <div class="container-fluid">
-        © 2018 Copyright: Jacob Cavazos
-        <a href="https://www.MDBootstrap.com"> MDBootstrap.com </a>
-      </div>
-    </div>
-    <!--/.Copyright-->
-  </footer>
-  <!--/.Footer-->
-  <!-- SCRIPTS -->
-  <!-- JQuery -->
-  <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-  <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="js/popper.min.js"></script>
-  <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
+</main>
+<!--Main layout-->
+
+<!--Footer-->
+<footer>
+
+</footer>
+<!--Footer-->
+<!-- SCRIPTS -->
+<!-- JQuery -->
+<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="js/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="js/mdb.min.js"></script>
+<!-- Initializations -->
+<script>
   <!-- Initializations -->
-  <script>
+  <
+  script >
     // SideNav Initialization
     $(".button-collapse").sideNav();
-  </script>
+</script>
 </body>
 
 </html>
