implemented navbar, side navbar, and footer

--- a/index.html
+++ b/index.html
@@ -15,10 +15,63 @@
   <!-- Your custom styles (optional) -->
   <link href="css/style.css" rel="stylesheet">
 </head>
-<!--Main Navigation-->
-<header>
+
+<body class="fixed-sn">
+
   <!--Main Navigation-->
   <header>
+
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark indigo double-nav">
+
+      <!-- Navbar brand -->
+      <a class="navbar-brand" href="#">Navbar</a>
+
+      <!-- Collapse button -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+      <!-- Collapsible content -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <!-- Links -->
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+
+          <!-- Dropdown -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+
+        </ul>
+        <!-- Links -->
+
+        <!-- Search form -->
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        </form>
+      </div>
+      <!-- Collapsible content -->
+
+    </nav>
+    <!--/.Navbar-->
+
     <!-- Sidebar navigation -->
     <div id="slide-out" class="side-nav fixed">
       <ul class="custom-scrollbar list-unstyled">
@@ -26,8 +79,8 @@
         <li>
           <div class="logo-wrapper waves-light">
             <a href="#">
-                        <img src="https://mdbootstrap.com/img/logo/mdb-transparent.png" class="img-fluid flex-center">
-                    </a>
+                            <img src="https://mdbootstrap.com/img/logo/mdb-transparent.png" class="img-fluid flex-center">
+                        </a>
           </div>
         </li>
         <!--/. Logo -->
@@ -36,23 +89,23 @@
           <ul class="social">
             <li>
               <a href="#" class="icons-sm fb-ic">
-                            <i class="fa fa-facebook"> </i>
-                        </a>
+                                <i class="fa fa-facebook"> </i>
+                            </a>
             </li>
             <li>
               <a href="#" class="icons-sm pin-ic">
-                            <i class="fa fa-pinterest"> </i>
-                        </a>
+                                <i class="fa fa-pinterest"> </i>
+                            </a>
             </li>
             <li>
               <a href="#" class="icons-sm gplus-ic">
-                            <i class="fa fa-google-plus"> </i>
-                        </a>
+                                <i class="fa fa-google-plus"> </i>
+                            </a>
             </li>
             <li>
               <a href="#" class="icons-sm tw-ic">
-                            <i class="fa fa-twitter"> </i>
-                        </a>
+                                <i class="fa fa-twitter"> </i>
+                            </a>
             </li>
           </ul>
         </li>
@@ -71,9 +124,9 @@
           <ul class="collapsible collapsible-accordion">
             <li>
               <a class="collapsible-header waves-effect arrow-r">
-                            <i class="fa fa-chevron-right"></i> Submit blog
-                            <i class="fa fa-angle-down rotate-icon"></i>
-                        </a>
+                                <i class="fa fa-chevron-right"></i> Submit blog
+                                <i class="fa fa-angle-down rotate-icon"></i>
+                            </a>
               <div class="collapsible-body">
                 <ul>
                   <li>
@@ -87,9 +140,9 @@
             </li>
             <li>
               <a class="collapsible-header waves-effect arrow-r">
-                            <i class="fa fa-hand-pointer-o"></i> Instruction
-                            <i class="fa fa-angle-down rotate-icon"></i>
-                        </a>
+                                <i class="fa fa-hand-pointer-o"></i> Instruction
+                                <i class="fa fa-angle-down rotate-icon"></i>
+                            </a>
               <div class="collapsible-body">
                 <ul>
                   <li>
@@ -103,9 +156,9 @@
             </li>
             <li>
               <a class="collapsible-header waves-effect arrow-r">
-                            <i class="fa fa-eye"></i> About
-                            <i class="fa fa-angle-down rotate-icon"></i>
-                        </a>
+                                <i class="fa fa-eye"></i> About
+                                <i class="fa fa-angle-down rotate-icon"></i>
+                            </a>
               <div class="collapsible-body">
                 <ul>
                   <li>
@@ -119,9 +172,9 @@
             </li>
             <li>
               <a class="collapsible-header waves-effect arrow-r">
-                            <i class="fa fa-envelope-o"></i> Contact me
-                            <i class="fa fa-angle-down rotate-icon"></i>
-                        </a>
+                                <i class="fa fa-envelope-o"></i> Contact me
+                                <i class="fa fa-angle-down rotate-icon"></i>
+                            </a>
               <div class="collapsible-body">
                 <ul>
                   <li>
@@ -160,37 +213,44 @@
 
   </header>
   <!--Main Navigation-->
-</header>
-<!--Main Navigation-->
 
-<!--Main layout-->
-<main>
+  <!--Main layout-->
+  <main>
 
-</main>
-<!--Main layout-->
+  </main>
+  <!--Main layout-->
 
-<!--Footer-->
-<footer>
+  <!--Footer-->
+  <footer class="page-footer blue center-on-small-only">
 
-</footer>
-<!--Footer-->
-<!-- SCRIPTS -->
-<!-- JQuery -->
-<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="js/popper.min.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<!-- MDB core JavaScript -->
-<script type="text/javascript" src="js/mdb.min.js"></script>
-<!-- Initializations -->
-<script>
+    <!--Copyright-->
+    <div class="footer-copyright">
+      <div class="container-fluid">
+        © 2018 Copyright:
+        <a href="https://jacobcavazos.com"> jacobcavazos.com </a>
+
+      </div>
+    </div>
+    <!--/.Copyright-->
+
+  </footer>
+  <!--/.Footer-->
+
+  <!-- SCRIPTS -->
+  <!-- JQuery -->
+  <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="js/popper.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="js/mdb.min.js"></script>
+
   <!-- Initializations -->
-  <
-  script >
+  <script>
     // SideNav Initialization
     $(".button-collapse").sideNav();
-</script>
+  </script>
 </body>
 
 </html>
