updated logo and implemented light blue skin for color

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="fixed-sn">
+<body class="fixed-sn light-blue-skin">
 
   <!--Main Navigation-->
   <header>
@@ -33,7 +33,7 @@
 
       <!-- Breadcrumb-->
       <div class="breadcrumb-dn mr-auto">
-        <p>Material Design for Bootstrap</p>
+        <p>Material Design Admin Dashboard</p>
       </div>
 
       <!-- Links -->
@@ -73,7 +73,7 @@
         <li>
           <div class="logo-wrapper waves-light">
             <a href="#">
-                            <img src="https://mdbootstrap.com/img/logo/mdb-transparent.png" class="img-fluid flex-center">
+                            <img src="img/png/JC_v3.png" class="img-fluid flex-center">
                         </a>
           </div>
         </li>
