background photo for sidenav

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!--/.Navbar-->
 
     <!-- Sidebar navigation -->
-    <div id="slide-out" class="side-nav fixed">
+    <div id="slide-out" class="side-nav fixed sn-bg-2">
       <ul class="custom-scrollbar list-unstyled">
         <!-- Logo -->
         <li>
@@ -75,6 +75,8 @@
             <a href="#">
                             <img src="img/png/JC_v3.png" class="img-fluid flex-center">
                         </a>
+            <!-- Mask -->
+            <div class="sidenav-bg mask-strong"></div>
           </div>
         </li>
         <!--/. Logo -->
