--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header>
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark indigo double-nav">
+    <nav class="navbar navbar-expand-lg navbar-dark double-nav fixed-top scrolling-navbar light-blue.darken">
 
       <!-- SideNav slide-out button -->
       <div class="float-left">
@@ -70,11 +70,11 @@
     <div id="slide-out" class="side-nav fixed sn-bg-2">
       <ul class="custom-scrollbar list-unstyled">
         <!-- Logo -->
-        <li>
-          <div class="logo-wrapper waves-light">
-            <a href="#">
+        <li class="logo-sn waves-effect">
+          <div class=" text-center">
+            <a href="#" class="pl-0">
                             <img src="img/png/JC_v3.png" class="img-fluid flex-center">
-                        </a>
+              </a>
             <!-- Mask -->
             <div class="sidenav-bg mask-strong"></div>
           </div>
