implemented sections and initialized components with JavaScripts

--- a/index.html
+++ b/index.html
@@ -186,7 +186,123 @@
 
   <!--Main layout-->
   <main>
+    <div class="container-fluid">
 
+      <!--Section: Modals-->
+      <section>
+
+
+
+      </section>
+      <!--Section: Modals-->
+
+      <!--Section: Main panel-->
+      <section class="mb-5">
+
+
+
+      </section>
+      <!--Section: Main panel-->
+      <section class="card card-cascade narrower mb-5">
+
+        <!--Grid row-->
+        <div class="row">
+
+          <!--Grid column-->
+          <div class="col-md-5">
+            <!--Date select-->
+            <p class="lead">
+              <span class="badge info-color-dark p-2">Date range</span>
+            </p>
+            <select class="mdb-select colorful-select dropdown-info">
+               <option value="" disabled selected>Choose time period</option>
+               <option value="1">Today</option>
+               <option value="2">Yesterday</option>
+               <option value="3">Last 7 days</option>
+               <option value="3">Last 30 days</option>
+               <option value="3">Last week</option>
+              <option value="3">Last month</option>
+            </select>
+            <!--Date pickers-->
+            <p class="lead my-4">
+              <span class="badge info-color-dark p-2">Custom date</span>
+            </p>
+            <div class="md-form">
+              <input placeholder="Selected date" type="text" id="from" class="form-control datepicker">
+              <label for="date-picker-example">From</label>
+            </div>
+            <div class="md-form">
+              <input placeholder="Selected date" type="text" id="to" class="form-control datepicker">
+              <label for="date-picker-example">To</label>
+            </div>
+            <!--Panel Header-->
+            <div class="view py-3 gradient-card-header info-color-dark">
+              <h5 class="mb-0">Sales</h5>
+            </div>
+            <!--/Panel Header-->
+
+            <!--Panel content-->
+            <div class="card-body">
+
+              <!--Grid row-->
+              <div class="row">
+
+                <!--Grid column-->
+                <div class="col-md-6 mb-4">
+
+
+
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-md-6 mb-4 text-center">
+
+
+
+                </div>
+                <!--Grid column-->
+
+              </div>
+              <!--Grid row-->
+
+            </div>
+            <!--Panel content-->
+
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-md-7">
+
+
+
+          </div>
+          <!--Grid column-->
+
+        </div>
+        <!--Grid row-->
+
+      </section>
+      <!--Section: Main panel-->
+
+      <!--Section: Table-->
+      <section class="mb-5">
+
+
+
+      </section>
+      <!--Section: Table-->
+
+      <!--Section: Accordion-->
+      <section class="mb-5">
+
+
+
+      </section>
+      <!--Section: Accordion-->
+
+    </div>
   </main>
   <!--Main layout-->
 
@@ -220,7 +336,12 @@
   <script>
     // SideNav Initialization
     $(".button-collapse").sideNav();
+    // Material Select Initialization
+    $(document).ready(function() {
+      $('.mdb-select').material_select();
+    });
   </script>
+
 </body>
 
 </html>
