--- a/index.html
+++ b/index.html
@@ -209,32 +209,20 @@
         <div class="row">
 
           <!--Grid column-->
+          <div class="col-md-7">
+
+            <!--Panel Header-->
+            <div class="view py-3 gradient-card-header info-color-dark mb-4">
+
+              <canvas id="lineChart"></canvas>
+
+            </div>
+            <!--/Card image-->
+
+          </div>
+          <!--Grid column-->
           <div class="col-md-5">
-            <!--Date select-->
-            <p class="lead">
-              <span class="badge info-color-dark p-2">Date range</span>
-            </p>
-            <select class="mdb-select colorful-select dropdown-info">
-               <option value="" disabled selected>Choose time period</option>
-               <option value="1">Today</option>
-               <option value="2">Yesterday</option>
-               <option value="3">Last 7 days</option>
-               <option value="3">Last 30 days</option>
-               <option value="3">Last week</option>
-              <option value="3">Last month</option>
-            </select>
-            <!--Date pickers-->
-            <p class="lead my-4">
-              <span class="badge info-color-dark p-2">Custom date</span>
-            </p>
-            <div class="md-form">
-              <input placeholder="Selected date" type="text" id="from" class="form-control datepicker">
-              <label for="date-picker-example">From</label>
-            </div>
-            <div class="md-form">
-              <input placeholder="Selected date" type="text" id="to" class="form-control datepicker">
-              <label for="date-picker-example">To</label>
-            </div>
+
             <!--Panel Header-->
             <div class="view py-3 gradient-card-header info-color-dark">
               <h5 class="mb-0">Sales</h5>
@@ -250,7 +238,32 @@
                 <!--Grid column-->
                 <div class="col-md-6 mb-4">
 
+                  <!--Date select-->
+                  <p class="lead">
+                    <span class="badge info-color-dark p-2">Date range</span>
+                  </p>
+                  <select class="mdb-select colorful-select dropdown-info">
+                    <option value="" disabled selected>Choose time period</option>
+                    <option value="1">Today</option>
+                    <option value="2">Yesterday</option>
+                    <option value="3">Last 7 days</option>
+                    <option value="3">Last 30 days</option>
+                    <option value="3">Last week</option>
+                    <option value="3">Last month</option>
+                </select>
 
+                  <!--Date pickers-->
+                  <p class="lead my-4">
+                    <span class="badge info-color-dark p-2">Custom date</span>
+                  </p>
+                  <div class="md-form">
+                    <input placeholder="Selected date" type="text" id="from" class="form-control datepicker">
+                    <label for="date-picker-example">From</label>
+                  </div>
+                  <div class="md-form">
+                    <input placeholder="Selected date" type="text" id="to" class="form-control datepicker">
+                    <label for="date-picker-example">To</label>
+                  </div>
 
                 </div>
                 <!--Grid column-->
@@ -258,7 +271,32 @@
                 <!--Grid column-->
                 <div class="col-md-6 mb-4 text-center">
 
+                  <!--Summary-->
+                  <p>Total sales:
+                    <strong>2000$</strong>
+                    <button type="button" class="btn btn-info btn-sm p-2" data-toggle="tooltip" data-placement="top" title="Total sales in the given period">
+                        <i class="fa fa-question"></i>
+                    </button>
+                  </p>
+                  <p>Average sales:
+                    <strong>100$</strong>
+                    <button type="button" class="btn btn-info btn-sm p-2" data-toggle="tooltip" data-placement="top" title="Average daily sales in the given period">
+                        <i class="fa fa-question"></i>
+                    </button>
+                  </p>
 
+                  <!--Change chart-->
+                  <span class="min-chart my-4" id="chart-sales" data-percent="76">
+                    <span class="percent"></span>
+                  </span>
+                  <h5>
+                    <span class="badge green p-2">Change
+                        <i class="fa fa-arrow-circle-up ml-1"></i>
+                    </span>
+                    <button type="button" class="btn btn-info btn-sm p-2" data-toggle="tooltip" data-placement="top" title="Percentage change compared to the same period in the past">
+                        <i class="fa fa-question"></i>
+                    </button>
+                </h5>
 
                 </div>
                 <!--Grid column-->
@@ -272,35 +310,45 @@
           </div>
           <!--Grid column-->
 
-          <!--Grid column-->
-          <div class="col-md-7">
-
-
-
-          </div>
-          <!--Grid column-->
 
         </div>
         <!--Grid row-->
 
-      </section>
-      <!--Section: Main panel-->
+    </div>
+    <!--Panel content-->
 
-      <!--Section: Table-->
-      <section class="mb-5">
+    </div>
+    <!--Grid column-->
 
-
-
-      </section>
-      <!--Section: Table-->
-
-      <!--Section: Accordion-->
-      <section class="mb-5">
+    <!--Grid column-->
+    <div class="col-md-7">
 
 
 
-      </section>
-      <!--Section: Accordion-->
+    </div>
+    <!--Grid column-->
+
+    </div>
+    <!--Grid row-->
+
+    </section>
+    <!--Section: Main panel-->
+
+    <!--Section: Table-->
+    <section class="mb-5">
+
+
+
+    </section>
+    <!--Section: Table-->
+
+    <!--Section: Accordion-->
+    <section class="mb-5">
+
+
+
+    </section>
+    <!--Section: Accordion-->
 
     </div>
   </main>
@@ -339,6 +387,68 @@
     // Material Select Initialization
     $(document).ready(function() {
       $('.mdb-select').material_select();
+    });
+    // Data Picker Initialization
+    $('.datepicker').pickadate();
+    // Tooltip Initialization
+    $(function() {
+      $('[data-toggle="tooltip"]').tooltip()
+    })
+  </script>
+  <!-- Charts -->
+  <script>
+    // Minimalist chart
+    $(function() {
+      $('.min-chart#chart-sales').easyPieChart({
+        barColor: "#4caf50",
+        onStep: function(from, to, percent) {
+          $(this.el).find('.percent').text(Math.round(percent));
+        }
+      });
+    });
+
+    // Main chart
+    var ctxL = document.getElementById("lineChart").getContext('2d');
+    var myLineChart = new Chart(ctxL, {
+      type: 'line',
+      data: {
+        labels: ["January", "February", "March", "April", "May", "June", "July"],
+        datasets: [{
+          label: "My First dataset",
+          fillColor: "#fff",
+          backgroundColor: 'rgba(255, 255, 255, .3)',
+          borderColor: 'rgba(255, 255, 255)',
+          data: [0, 10, 5, 2, 20, 30, 45],
+        }]
+      },
+      options: {
+        legend: {
+          labels: {
+            fontColor: "#fff",
+          }
+        },
+        scales: {
+          xAxes: [{
+            gridLines: {
+              display: true,
+              color: "rgba(255,255,255,.25)"
+            },
+            ticks: {
+              fontColor: "#fff",
+            },
+          }],
+          yAxes: [{
+            display: true,
+            gridLines: {
+              display: true,
+              color: "rgba(255,255,255,.25)"
+            },
+            ticks: {
+              fontColor: "#fff",
+            },
+          }],
+        }
+      }
     });
   </script>
 
