fixed modified table bug

--- a/index.html
+++ b/index.html
@@ -426,6 +426,54 @@
 
       </div>
       <!--Top Table UI-->
+      <!--Card-->
+      <div class="card card-cascade narrower">
+
+        <!--Card header-->
+        <div class="view view-cascade py-3 gradient-card-header info-color-dark mx-4">
+
+
+
+        </div>
+        <!--/Card header-->
+        <!--Card header-->
+        <!--Card header-->
+        <div class="view py-3 gradient-card-header info-color-dark mx-4 d-flex justify-content-between align-items-center">
+
+          <div>
+            <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2">
+          <i class="fa fa-th-large mt-0"></i>
+      </button>
+            <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2">
+          <i class="fa fa-columns mt-0"></i>
+      </button>
+          </div>
+
+          <a href="" class="white-text mx-3">Table name</a>
+
+          <div>
+            <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2">
+          <i class="fa fa-pencil mt-0"></i>
+      </button>
+            <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2">
+          <i class="fa fa-remove mt-0"></i>
+      </button>
+            <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2">
+          <i class="fa fa-info-circle mt-0"></i>
+      </button>
+          </div>
+
+        </div>
+        <!--/Card header-->
+
+        <!--Card content-->
+        <div class="card-body card-body-cascade">
+
+        </div>
+        <!--/.Card content-->
+
+      </div>
+      <!--/.Card-->
 
     </section>
     <!--Section: Table-->
