added table data

--- a/index.html
+++ b/index.html
@@ -467,7 +467,54 @@
         <!--/Card header-->
 
         <!--Card content-->
-        <div class="card-body card-body-cascade">
+        <div class="card-body">
+          <div class="table-responsive">
+
+            <table class="table">
+
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th class="th-lg">First column</th>
+                  <th class="th-lg">Second column</th>
+                  <th class="th-lg">Third column</th>
+                  <th class="th-lg">Fourth column</th>
+                  <th class="th-lg">Fifth column</th>
+                  <th class="th-lg">Sixth column</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                  <td>Lorem Ipsum</td>
+                </tr>
+              </tbody>
+            </table>
+
+          </div>
 
         </div>
         <!--/.Card content-->
